mollysocket/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mollysocket
  namespace: mollysocket
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mollysocket
  template:
    metadata:
      labels:
        app: mollysocket
    spec:
      nodeSelector:
        storage: longhorn
      containers:
        - name: mollysocket
          image: ghcr.io/mollyim/mollysocket:1.7.0
          imagePullPolicy: IfNotPresent
          args: ["server"]
          workingDir: /data
          ports:
            - containerPort: 8020
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mollysocket
