mollysocket/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mollysocket
  name: mollysocket
  namespace: mollysocket
spec:
  selector:
    app: mollysocket
  ports:
  - protocol: TCP
    port: 8020
    targetPort: 8020
