mollysocket/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mollysocket
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
    - websecxt
  routes:
    - match: Host(`molly.mandariini.uk`)
      kind: Rule
      services:
        - name: mollysocket
          namespace: mollysocket
          port: 8020
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: mandariini-uk-tls
