mollysocket/networkpolicy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-traefik-ingress
  namespace: mollysocket
spec:
  podSelector:
    matchLabels:
      app: mollysocket
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8020
          protocol: TCP
